examples/datalog/14_aggregations/57_topk_grouped.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_topk_grp
Knowledge graph 'test_topk_grp' created.
Switched to knowledge graph: test_topk_grp
> .kg use test_topk_grp
Switched to knowledge graph: test_topk_grp
> +scores[("Math", 95), ("Math", 87), ("Math", 92), ("Science", 88), ("Science", 91), ("Science", 85)].
Inserted 6 fact(s) into 'scores'.
> top2_by_subject(Subj, <TOP_K:2:Score>) :- scores(Subj, Score).
Script error: Parse error: Unknown aggregate function: 
